--- a/Makefile.Config
+++ b/Makefile.Config
@@ -18,11 +18,19 @@ sugidmode = 6755
 #XXX: Why doesn't we have any symbol like 'linux' defined with -ansi in C++?
 #     (Maybe ANSI C++ says that this is good so, but I think that this is stupid.)
 #
-GLOBALCFLAGS  +=-pedantic
+GLOBALCFLAGS  +=-pedantic -D_FILE_OFFSET_BITS=64
 
-#Warning: If you use C99 you MUST explizitely define __cplusplus!
-GLOBALCXXFLAGS+=-std=c++98
-GLOBALCCFLAGS +=-std=gnu99
+ifndef STDCXX
+STDCXX=gnu++98
+endif
+
+GLOBALCXXFLAGS+=-std=$(STDCXX) -Wno-long-long -fno-strict-aliasing
+
+ifndef STDCC
+STDCC=gnu99
+endif
+
+GLOBALCCFLAGS +=-std=$(STDCC)
 
 #Don't you want symbol tables in your executables and object files? Then
 #comment this: (symbol tables are needed for gdb, makes the executables - and
@@ -44,7 +52,7 @@ OPTIMIZATION=3
 endif
 GLOBALCFLAGS  +=-O$(OPTIMIZATION)
 else
-GLOBALCFLAGS  +=-O0
+GLOBALCFLAGS  +=-O0 -fno-omit-framepointer
 endif
 
 #Do you want to use the profiler?
