--- a/Makefile.Include.in
+++ b/Makefile.Include.in
@@ -385,7 +385,7 @@ BUILDDIR = $(TOPDIR)/$(BUILDROOT)/$(THISDIR)
 BTMAKEFILECPPFLAGS += -I$(TOPDIR)/wrappers    -I$(BTMAKEPATH)/wrappers
 BTMAKEFILECFLAGS   += -I$(TOPDIR)/wrappers    -I$(BTMAKEPATH)/wrappers
 BTMAKEFILECXXFLAGS += -I$(TOPDIR)/wrappers    -I$(BTMAKEPATH)/wrappers
-BTMAKEFILELDFLAGS  += -L$(TOPDIR)/workarounds -L$(BTMAKEPATH)/workarounds
+BTMAKEFILELDFLAGS  += -L$(TOPDIR) -L$(BTMAKEPATH) -lbtmakefile
 
 -include /etc/btmakefile.config
 
@@ -455,15 +455,15 @@ export TARGETLC
 # -MT $<.d 
 MKDEPFLAGS=-MD -MP -MF $<.d
 
-REALCPPFLAGS = $(BTMAKEFILECPPFLAGS) $(GLOBALCPPFLAGS) $(TARGETCPPFLAGS) $(CONFIGCPPFLAGS) $(LOCALCPPFLAGS) $(CPPFLAGS) $(MKDEPFLAGS)
-REALCFLAGS   = $(BTMAKEFILECFLAGS)   $(GLOBALCFLAGS)   $(TARGETCFLAGS)   $(CONFIGCFLAGS)   $(LOCALCFLAGS)   $(CFLAGS)   $(REALCPPFLAGS)
-REALLDFLAGS  = $(BTMAKEFILELDFLAGS)  $(GLOBALLDFLAGS)  $(TARGETLDFLAGS)  $(CONFIGLDFLAGS)  $(LOCALLDFLAGS)  $(LDFLAGS)
-REALCXXFLAGS = $(BTMAKEFILECXXFLAGS) $(GLOBALCXXFLAGS) $(TARGETCXXFLAGS) $(CONFIGCXXFLAGS) $(LOCALCXXFLAGS) $(CXXFLAGS) $(REALCFLAGS)
-REALCCFLAGS  = $(BTMAKEFILECCFLAGS)  $(GLOBALCCFLAGS)  $(TARGETCCFLAGS)  $(CONFIGCCFLAGS)  $(LOCALCCFLAGS)  $(CCFLAGS)  $(REALCFLAGS)
-REALSOFLAGS  = $(BTMAKEFILESOFLAGS)  $(GLOBALSOFLAGS)  $(TARGETSOFLAGS)  $(CONFIGSOFLAGS)  $(LOCALSOFLAGS)  $(SOFLAGS)  $(REALCFLAGS) $(REALLDFLAGS)
-REALPIFLAGS  = $(BTMAKEFILEPIFLAGS)  $(GLOBALPIFLAGS)  $(TARGETPIFLAGS)  $(CONFIGPIFLAGS)  $(LOCALPIFLAGS)  $(PIFLAGS)  $(REALCFLAGS) $(REALLDFLAGS)
-REALDEFLAGS  = $(BTMAKEFILEDEFLAGS)  $(GLOBALDEFLAGS)  $(TARGETDEFLAGS)  $(CONFIGDEFLAGS)  $(LOCALDEFLAGS)  $(DEFLAGS)  $(REALCFLAGS) $(REALLDFLAGS)
-REALSEFLAGS  = $(BTMAKEFILESEFLAGS)  $(GLOBALSEFLAGS)  $(TARGETSEFLAGS)  $(CONFIGSEFLAGS)  $(LOCALSEFLAGS)  $(SEFLAGS)  $(REALCFLAGS) $(REALLDFLAGS)
+REALCPPFLAGS = $(CPPFLAGS) $(BTMAKEFILECPPFLAGS) $(GLOBALCPPFLAGS) $(TARGETCPPFLAGS) $(CONFIGCPPFLAGS) $(LOCALCPPFLAGS) $(MKDEPFLAGS)
+REALCFLAGS   = $(CFLAGS)   $(BTMAKEFILECFLAGS)   $(GLOBALCFLAGS)   $(TARGETCFLAGS)   $(CONFIGCFLAGS)   $(LOCALCFLAGS)   $(REALCPPFLAGS)
+REALLDFLAGS  = $(LDFLAGS)  $(BTMAKEFILELDFLAGS)  $(GLOBALLDFLAGS)  $(TARGETLDFLAGS)  $(CONFIGLDFLAGS)  $(LOCALLDFLAGS)  
+REALCXXFLAGS = $(CXXFLAGS) $(BTMAKEFILECXXFLAGS) $(GLOBALCXXFLAGS) $(TARGETCXXFLAGS) $(CONFIGCXXFLAGS) $(LOCALCXXFLAGS) $(REALCFLAGS)
+REALCCFLAGS  = $(CCFLAGS)  $(BTMAKEFILECCFLAGS)  $(GLOBALCCFLAGS)  $(TARGETCCFLAGS)  $(CONFIGCCFLAGS)  $(LOCALCCFLAGS)  $(REALCFLAGS)
+REALSOFLAGS  = $(SOFLAGS)  $(BTMAKEFILESOFLAGS)  $(GLOBALSOFLAGS)  $(TARGETSOFLAGS)  $(CONFIGSOFLAGS)  $(LOCALSOFLAGS)  $(REALCFLAGS) $(REALLDFLAGS)
+REALPIFLAGS  = $(PIFLAGS)  $(BTMAKEFILEPIFLAGS)  $(GLOBALPIFLAGS)  $(TARGETPIFLAGS)  $(CONFIGPIFLAGS)  $(LOCALPIFLAGS)  $(REALCFLAGS) $(REALLDFLAGS)
+REALDEFLAGS  = $(DEFLAGS)  $(BTMAKEFILEDEFLAGS)  $(GLOBALDEFLAGS)  $(TARGETDEFLAGS)  $(CONFIGDEFLAGS)  $(LOCALDEFLAGS)  $(REALCFLAGS) $(REALLDFLAGS)
+REALSEFLAGS  = $(SEFLAGS)  $(BTMAKEFILESEFLAGS)  $(GLOBALSEFLAGS)  $(TARGETSEFLAGS)  $(CONFIGSEFLAGS)  $(LOCALSEFLAGS)  $(REALCFLAGS) $(REALLDFLAGS)
 
 CPP = $(TARGETCPP) $(REALCPPFLAGS)
 CXS = $(TARGETCXS) $(REALCXXFLAGS)
@@ -874,9 +874,9 @@ ifndef PIOBJS
 PIOBJS = $(OBJS)
 endif
 $(PITARGET): $(PIOBJS)
-
-$(ALL): $(PITARGET)
 endif
+
+$(ALL): $(PITARGETS)
 
 !!PATTERNRULE! !$(PITARGETS)!Linking (creating runtime link library aka plugin)!$^!$(PI) $^ -o $@ -L$(BUILDDIR) $(REALPIFLAGS) $(PIFLAGS-$@) $(BTMAKEFILE-PIFLAGS-$@)!!
 
@@ -931,7 +931,7 @@ endif
 
 btmake-depclean-pre: FORCE
 	$(NOP)
-ifeq ($(MAKELEVEL),1)
+ifeq ($(MAKELEVEL),2)
 	@echo "Making depclean ..."
 endif
 
@@ -946,7 +946,7 @@ btmake-depclean-post: FORCE
 
 btmake-clean-pre: FORCE
 	$(NOP)
-ifeq ($(MAKELEVEL),1)
+ifeq ($(MAKELEVEL),2)
 	@echo "Making clean ..."
 	@$(MAKE) -f $(MAKEFILE) $(NPD) depclean
 endif
