Add support for clang, also allow for adding of compilers that use other command line options than -E, -S, -c, -shared and -static.

--- a/Makefile.Config.LINUX
+++ b/Makefile.Config.LINUX
@@ -1,12 +1,12 @@
 TARGETCPP           = $(LINUXTOOLSPREFIX)$(CONFIGURE_CPP)
-TARGETCXX           = $(LINUXTOOLSPREFIX)$(CONFIGURE_CXX) -c
-TARGETCC            = $(LINUXTOOLSPREFIX)$(CONFIGURE_CC)  -c
-TARGETCXS           = $(LINUXTOOLSPREFIX)$(CONFIGURE_CXX) -S
-TARGETCS            = $(LINUXTOOLSPREFIX)$(CONFIGURE_CC)  -S
-TARGETSO            = $(LINUXTOOLSPREFIX)$(CONFIGURE_CXX) -shared
-TARGETPI            = $(LINUXTOOLSPREFIX)$(CONFIGURE_CXX) -shared
-TARGETDE            = $(LINUXTOOLSPREFIX)$(CONFIGURE_CXX)
-TARGETSE            = $(LINUXTOOLSPREFIX)$(CONFIGURE_CXX) -static
+TARGETCXX           = $(LINUXTOOLSPREFIX)$(CONFIGURE_CXX)
+TARGETCC            = $(LINUXTOOLSPREFIX)$(CONFIGURE_CC)
+TARGETCXS           = $(LINUXTOOLSPREFIX)$(CONFIGURE_CXS)
+TARGETCS            = $(LINUXTOOLSPREFIX)$(CONFIGURE_CS)
+TARGETSO            = $(LINUXTOOLSPREFIX)$(CONFIGURE_SO)
+TARGETPI            = $(LINUXTOOLSPREFIX)$(CONFIGURE_PI)
+TARGETDE            = $(LINUXTOOLSPREFIX)$(CONFIGURE_DE)
+TARGETSE            = $(LINUXTOOLSPREFIX)$(CONFIGURE_SE)
 TARGETAR            = $(LINUXTOOLSPREFIX)$(CONFIGURE_AR)
 
 TARGETCPPFLAGS      = -D$(TARGET)
