Systematically fixed flags given to compilers and linkers.
* Some duplicated flags were removed
* Some missed flags were added
* preprocessor/compiler/linker flags only given to preprocessor/compiler/linker phas

--- a/Makefile.Config
+++ b/Makefile.Config
@@ -18,7 +18,8 @@ sugidmode = 6755
 #XXX: Why doesn't we have any symbol like 'linux' defined with -ansi in C++?
 #     (Maybe ANSI C++ says that this is good so, but I think that this is stupid.)
 #
-GLOBALCFLAGS  +=-pedantic -D_FILE_OFFSET_BITS=64
+GLOBALCFLAGS   += -pedantic
+GLOBALCPPFLAGS += -D_FILE_OFFSET_BITS=64
 
 ifndef STDCXX
 STDCXX=gnu++11
