--- a/Makefile.Include.in
+++ b/Makefile.Include.in
@@ -383,8 +383,6 @@ BUILDDIR = $(TOPDIR)/$(BUILDROOT)/$(THISDIR)
 %.lang: $(BUILDDIR)/%.lang
 
 BTMAKEFILECPPFLAGS += -I$(TOPDIR)/wrappers    -I$(BTMAKEPATH)/wrappers
-BTMAKEFILECFLAGS   += -I$(TOPDIR)/wrappers    -I$(BTMAKEPATH)/wrappers
-BTMAKEFILECXXFLAGS += -I$(TOPDIR)/wrappers    -I$(BTMAKEPATH)/wrappers
 BTMAKEFILELDFLAGS  += -L$(TOPDIR) -L$(BTMAKEPATH) -lbtmakefile
 
 -include /etc/btmakefile.config
@@ -456,24 +454,23 @@ export TARGETLC
 MKDEPFLAGS=-MD -MP -MF $<.d
 
 REALCPPFLAGS = $(CPPFLAGS) $(BTMAKEFILECPPFLAGS) $(GLOBALCPPFLAGS) $(TARGETCPPFLAGS) $(CONFIGCPPFLAGS) $(LOCALCPPFLAGS) $(MKDEPFLAGS)
-REALCFLAGS   = $(CFLAGS)   $(BTMAKEFILECFLAGS)   $(GLOBALCFLAGS)   $(TARGETCFLAGS)   $(CONFIGCFLAGS)   $(LOCALCFLAGS)   $(REALCPPFLAGS)
-REALLDFLAGS  = $(LDFLAGS)  $(BTMAKEFILELDFLAGS)  $(GLOBALLDFLAGS)  $(TARGETLDFLAGS)  $(CONFIGLDFLAGS)  $(LOCALLDFLAGS)  
-REALCXXFLAGS = $(CXXFLAGS) $(BTMAKEFILECXXFLAGS) $(GLOBALCXXFLAGS) $(TARGETCXXFLAGS) $(CONFIGCXXFLAGS) $(LOCALCXXFLAGS) $(REALCFLAGS)
-REALCCFLAGS  = $(CCFLAGS)  $(BTMAKEFILECCFLAGS)  $(GLOBALCCFLAGS)  $(TARGETCCFLAGS)  $(CONFIGCCFLAGS)  $(LOCALCCFLAGS)  $(REALCFLAGS)
+REALCFLAGS   = $(CFLAGS)   $(BTMAKEFILECFLAGS)   $(GLOBALCFLAGS)   $(TARGETCFLAGS)   $(CONFIGCFLAGS)   $(LOCALCFLAGS)
+REALLDFLAGS  = $(LDFLAGS)  $(BTMAKEFILELDFLAGS)  $(GLOBALLDFLAGS)  $(TARGETLDFLAGS)  $(CONFIGLDFLAGS)  $(LOCALLDFLAGS)
+REALCXXFLAGS = $(CXXFLAGS) $(BTMAKEFILECXXFLAGS) $(GLOBALCXXFLAGS) $(TARGETCXXFLAGS) $(CONFIGCXXFLAGS) $(LOCALCXXFLAGS)
+REALCCFLAGS  = $(CCFLAGS)  $(BTMAKEFILECCFLAGS)  $(GLOBALCCFLAGS)  $(TARGETCCFLAGS)  $(CONFIGCCFLAGS)  $(LOCALCCFLAGS)
+
 REALSOFLAGS  = $(SOFLAGS)  $(BTMAKEFILESOFLAGS)  $(GLOBALSOFLAGS)  $(TARGETSOFLAGS)  $(CONFIGSOFLAGS)  $(LOCALSOFLAGS)  $(REALCFLAGS) $(REALLDFLAGS)
 REALPIFLAGS  = $(PIFLAGS)  $(BTMAKEFILEPIFLAGS)  $(GLOBALPIFLAGS)  $(TARGETPIFLAGS)  $(CONFIGPIFLAGS)  $(LOCALPIFLAGS)  $(REALCFLAGS) $(REALLDFLAGS)
 REALDEFLAGS  = $(DEFLAGS)  $(BTMAKEFILEDEFLAGS)  $(GLOBALDEFLAGS)  $(TARGETDEFLAGS)  $(CONFIGDEFLAGS)  $(LOCALDEFLAGS)  $(REALCFLAGS) $(REALLDFLAGS)
 REALSEFLAGS  = $(SEFLAGS)  $(BTMAKEFILESEFLAGS)  $(GLOBALSEFLAGS)  $(TARGETSEFLAGS)  $(CONFIGSEFLAGS)  $(LOCALSEFLAGS)  $(REALCFLAGS) $(REALLDFLAGS)
 
-CPP = $(TARGETCPP) $(REALCPPFLAGS)
-CXS = $(TARGETCXS) $(REALCXXFLAGS)
-CS  = $(TARGETCS)  $(REALCCFLAGS)
-CXX = $(TARGETCXX) $(REALCXXFLAGS)
-CC  = $(TARGETCC)  $(REALCCFLAGS)
+CPP = $(TARGETCPP) $(REALCPPFLAGS) $(REALCFLAGS)
+CXS = $(TARGETCXS) $(REALCPPFLAGS) $(REALCFLAGS) $(REALCXXFLAGS)
+CS  = $(TARGETCS)  $(REALCPPFLAGS) $(REALCFLAGS) $(REALCCFLAGS)
+CXX = $(TARGETCXX) $(REALCPPFLAGS) $(REALCFLAGS) $(REALCXXFLAGS)
+CC  = $(TARGETCC)  $(REALCPPFLAGS) $(REALCFLAGS) $(REALCCFLAGS)
 SO  = $(TARGETSO)  $(REALSOFLAGS)
 PI  = $(TARGETPI)  $(REALPIFLAGS)
-DE  = $(TARGETDE)  $(REALDEFLAGS)
-#SE  = $(TARGETSE)  $(REALSEFLAGS)
 AR  = $(TARGETAR)  $(REALARFLAGS)
 
    endif # ifdef TARGETLC
@@ -862,7 +859,7 @@ endif
 
 $(ALL): $(SOTARGETS)
 
-!!PATTERNRULE! !$(SOTARGETS)!Linking (creating dynamic library)!$^!$(SO) $^ -o $@ -L$(BUILDDIR) $(REALSOFLAGS) $(SOFLAGS-$@) $(BTMAKEFILE-SOFLAGS-$@)!!
+!!PATTERNRULE! !$(SOTARGETS)!Linking (creating dynamic library)!$^!$(SO) -L$(BUILDDIR) $(REALSOFLAGS) $(SOFLAGS-$@) $(LDFLAGS-$@) $(BTMAKEFILE-SOFLAGS-$@) $(BTMAKEFILE-DEFLAGS-$@) $^ -o $@!!
 ifdef DEBUG
 DEBUG := $(shell echo SOTARGETS=$(SOTARGETS) >&2)
 endif
@@ -878,7 +875,7 @@ endif
 
 $(ALL): $(PITARGETS)
 
-!!PATTERNRULE! !$(PITARGETS)!Linking (creating runtime link library aka plugin)!$^!$(PI) $^ -o $@ -L$(BUILDDIR) $(REALPIFLAGS) $(PIFLAGS-$@) $(BTMAKEFILE-PIFLAGS-$@)!!
+!!PATTERNRULE! !$(PITARGETS)!Linking (creating runtime link library aka plugin)!$^!$(PI) -L$(BUILDDIR) $(REALPIFLAGS) $(PIFLAGS-$@) $(LDFLAGS-$@) $(BTMAKEFILE-PIFLAGS-$@) $(BTMAKEFILE-DEFLAGS-$@) $^ -o $@!!
 
 print-copyright:
 	@$(SHELL) -ec '( cat $(TOPDIR)/COPYRIGHT 2>/dev/null || cat $(BTMAKEPATH)/COPYRIGHT ) | sed '\''s;$$(package);$(package);g'\'' | sed '\''s;$$(copyrightyears);$(copyrightyears);g'\'' | sed '\''s;$$(mainauthor);$(mainauthor);g'\'
