Check for -fno-omit-framepointer vs -fno-omit-frame-pointer

--- a/Makefile.Config
+++ b/Makefile.Config
@@ -53,7 +53,7 @@ OPTIMIZATION=3
 endif
 GLOBALCFLAGS  +=-O$(OPTIMIZATION)
 else
-GLOBALCFLAGS  +=-O0 -fno-omit-framepointer
+GLOBALCFLAGS  +=-O0 $(NO_OMIT_FRAMEPOINTER)
 endif
 
 #Do you want to use the profiler?
